--- a/bootstrap/bootrstrap-7-prezentacja -ULA/bootstrap-project/css/style.css
+++ b/bootstrap/bootrstrap-7-prezentacja -ULA/bootstrap-project/css/style.css
@@ -63,6 +63,7 @@ section h3 {
 
 #main-nav {
 	background-color: transparent;
+  transition: all .5s;
 }
 
 #main-nav a.navbar-brand {
@@ -84,6 +85,7 @@ section h3 {
 
 #main-nav.scroll {
 	background-color: rgba(14, 216, 214, 0.75);
+    
 }
 
 #main-nav.scroll .nav-item a:hover {
@@ -246,7 +248,19 @@ section h3 {
 
 /*OUR TEAM -END*/
 
+/*CONTACT-START*/
+#contact {
+background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../img/footer/world/world-map.img");
+    
 
+}
+
+#contact .contact
+
+
+
+
+/*CONTACT-END*/
 
 
 
